--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
-name = "py-dev-init"
-version = "0.3.0"
-description = "Kickstart repo"
+name = "akvq"
+version = "0.0.1"
+description = "Get secrets from azure key vaults quick and easy"
 authors = ["Viktor Freiman <freiman.viktor@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-requests = "^2.26.0"
+azure-identity = "^1.10.0"
+azure-keyvault-secrets = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.10b0"
@@ -23,6 +24,7 @@ sphinxcontrib-kroki = "^1.3.0"
 toml = "^0.10.2"
 sphinx-copybutton = "^0.5.0"
 docs-helper = "^0.0.9"
+pytest = "~7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
